Wed Feb 14 18:37:54 GMT 2007  Olly Betts <olly@survex.com>

	* languages/steminternal.cc,languages/steminternal.h: Add
	  SET_CAPACITY() macro.

Wed Feb 14 17:39:50 GMT 2007  Olly Betts <olly@survex.com>

	* languages/steminternal.h: Don't cast away const.

Wed Feb 14 17:14:14 GMT 2007  Olly Betts <olly@survex.com>

	* include/Makefile: Add stub makefile.

Wed Feb 14 17:12:41 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac: ac_abs_srcdir, etc aren't available in configure
	  itself, so we have to do the work ourselves.

Wed Feb 14 12:54:26 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo in last commit.

Wed Feb 14 12:19:18 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,languages/Makefile.mk: Define automake
	  conditional VPATH_BUILD so we can only add extra entries to
	  INCLUDES in VPATH builds.

Wed Feb 14 11:59:02 GMT 2007  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: Ick, we need $(top_srcdir)/languages in
	  INCLUDES as the generated sources need to find non-generated
	  headers.

Wed Feb 14 11:46:43 GMT 2007  Olly Betts <olly@survex.com>

	* backends/database.cc,backends/remote/remote-database.cc,
	  common/database.h,common/remote-database.h,common/remoteprotocol.h,
	  docs/remote_protocol.html,net/remoteserver.cc: Support
	  get_lastdocid() on remote databases.

Wed Feb 14 11:20:33 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,include/Makefile.am,include/Makefile.mk:
	  Convert include subdirectory to use non-recursive make.

Wed Feb 14 11:05:00 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,bin/Makefile.am,configure.ac,examples/Makefile.am,
	  getopt/Makefile,getopt/Makefile.am,getopt/Makefile.mk,
	  tests/Makefile.am: Convert getopt subdirectory to use non-recursive
	  make.

Wed Feb 14 10:56:15 GMT 2007  Olly Betts <olly@survex.com>

	* tests/harness/Makefile.am: Remove as no longer used.

Wed Feb 14 10:38:27 GMT 2007  Olly Betts <olly@survex.com>
